--- a/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
+++ b/src/app/layouts/home/tenyears-experience/tenyears-experience.component.html
@@ -6,22 +6,6 @@
 
       <div class="container-fluid">
 
-        <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
-        <!-- <div id="tenYearsExperienceTitle" class="col text-center mt-4 mb-5">
-          <p><span id="tenYearsExperienceFirstSpan">10 </span><span id="tenYearsExperienceSecondSpan">AÑOS DE EXPERIENCIA</span></p>
-        </div> -->
-
-        <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
-        <!-- <div id="cellPhoneCurrentYearTourTitle" class="col text-center mt-4 mb-5">
-            <p>
-                <span id="currentYearTourFirstSpan">TOUR MISIONERO </span>
-                <br>
-                <br>
-                <span id="currentYearTourSecondSpan">2025</span>
-            </p>
-        </div> -->
-
-    
           <div class="row">
 
               <div id="canvas"></div> <!-- Lienzo de fondo -->
@@ -31,11 +15,10 @@
 
                     <div id="tenYearsRow" class="row">
             
-                        <!--========= NORMAL SCREEN CURRENT YEAR TOUR TITLE ========= -->
                         <div id="tenYearsExperienceLelftDiv" class="title3" >
 
                           
-                              <div id="tenYearsExperienceLelftDivContainer">
+                            <div id="tenYearsExperienceLelftDivContainer">
 
                                   <!-- <svg width="100" height="100" viewBox="0 0 100 100" fill="none" xmlns="http://www.w3.org/2000/svg">
                                     <path d="M50 10C40 10 30 15 25 25C20 35 25 45 30 55C35 65 40 75 50 80C60 75 65 65 70 55C75 45 80 35 75 25C70 15 60 10 50 10Z" fill="green"/>
@@ -43,45 +26,35 @@
                                     <path d="M45 35L50 40L45 45Z" fill="orange"/>
                                   </svg> -->
                                   <p>
-                                      <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">AÑOS</span>
+                                      <span id="tenYearsExperience1Span">10 </span><span id="tenYearsExperience2Span">{{ 'HOME.EXPERIENCE.TITLE_1' | translate }}</span>
                                   </p>
                                   <br>
                                   <p>
-                                      <span id="tenYearsExperience3Span">DE</span>
+                                      <span id="tenYearsExperience3Span">{{ 'HOME.EXPERIENCE.TITLE_2' | translate }}</span>
                                   </p>
                                   <br>
                                   <p>
-                                      <span id="tenYearsExperience4Span">EXPERIENCIA</span>
+                                      <span id="tenYearsExperience4Span">{{ 'HOME.EXPERIENCE.TITLE_3' | translate }}</span>
                                   </p>
                                   <br>
                                   <p>
-                                      <span id="tenYearsExperience5Span">PARA</span>
+                                      <span id="tenYearsExperience5Span">{{ 'HOME.EXPERIENCE.TITLE_4' | translate }}</span>
                                   </p>
                                   <br>
                                   <p>
-                                      <span id="tenYearsExperience6Span">LA GLORIA</span>
+                                      <span id="tenYearsExperience6Span">{{ 'HOME.EXPERIENCE.TITLE_5' | translate }}</span>
                                   </p>
                                   <br>
                                   <p>
-                                      <span id="tenYearsExperience7Span">DE DIOS</span>
+                                      <span id="tenYearsExperience7Span">{{ 'HOME.EXPERIENCE.TITLE_6' | translate }}</span>
                                   </p>
-                              </div>
+                            </div>
 
-                            <!--========= CELL PHONE CURRENT YEAR TOUR TITLE ========= -->
-                            <!-- <div id="cellPhoneTenYearsExperienceTitle" class="col">
-                                <p>
-                                    <span id="tenYearsExperienceFirstSpan">TOUR MISIONERO </span>
-                                    <br>
-                                    <br>
-                                    <span id="tenYearsExperienceSecondSpan">2025</span>
-                                </p>
-                            </div> -->
+                        </div>
 
-                          </div>
-
-                          <div class="imageContainer">
-                              <img src="../assets/img/brochure5.jpeg">
-                          </div>
+                        <div class="imageContainer">
+                            <img src="../assets/img/brochure5.jpeg">
+                        </div>
 
                     </div>
               
